--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-    font-family: 'Nunito Sans', sans-serif;
+    font-family: 'Poppins', Roboto Slab;
 }
 
 /* ===== Scrollbar Customization CSS ===== */
